# valhalla-rs

./: .clang-format  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Dockerfile.test  LICENSE  LICENSE-MIT  README.md  bitbucket-pipelines.yml  build.rs
.github/workflows/: publish.yml  push_image.yml  sanity_checks.yml
benches/: actor_bench.rs  config_bench.rs  tiles_bench.rs
libvalhalla/: .clang-format  CMakeLists.txt  Cargo.toml  README.md  build.rs
libvalhalla/src/: cxx.h  lib.rs  libvalhalla.cpp  libvalhalla.hpp
scripts/: update-valhalla-commit-msg.sh
src/: actor.hpp  actor.rs  config.hpp  config.rs  costing.hpp  cxx.h  lib.rs  libvalhalla.cpp  libvalhalla.hpp  main.rs
tests/: actor_test.rs  config_test.rs  costing_test.rs  integration_test.rs  tiles_test.rs
tests/andorra/: config.json  tiles.tar  traffic.tar
web/: index.html
