[package]
name = "valhalla"
version = "0.3.13"
edition = "2024"
rust-version = "1.85"
description = "Rust bindings for Valhalla routing engine"
readme = "README.md"
repository = "https://github.com/kinkard/valhalla-rs"
license = "MIT"
keywords = ["geo", "routing", "navigation", "ffi", "valhalla"]
# Valhalla uses git submodules that bring a lot of files that we don't need in the published crate.
exclude = [
    "**/.*",
    "**/.github/*",
    "**/test/*",
    "**/tests/*",
    "**/googletest/*",
    "**/googlemock/*",
    "**/doc/*",
    "**/docs/*",
    "**/doctest/*",
    "**/bench/*",

    "valhalla/CHANGELOG.md",
    "valhalla/run_route_scripts/*",
    "valhalla/taginfo.json",
    "valhalla/test_requests/*",
    # Somehow, valhalla/LICENSE.md is required for cmake, so all unused docs are excluded in a more specific way.
    "valhalla/third_party/**/*.md",
    # Python bindings and other files not needed for Rust bindings
    "valhalla/third_party/pybind11/*",
    "valhalla/third_party/rapidjson/bin/*",
    "valhalla/third_party/tz/NEWS",
]

[dependencies]
cxx = { version = "1.0", features = ["c++17"] }

[build-dependencies]
cmake = "0.1"
cxx-build = "1.0"
miniserde = "0.1"  # For compile_commands.json parsing
pkg-config = "0.3"

[dev-dependencies]
miniserde = "0.1"
pretty_assertions = "1"
tempfile = "3.20"
